# nusy-reasoners

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/nusy-abduction/: Cargo.toml
crates/nusy-abduction-battery/: Cargo.toml
crates/nusy-abduction-battery/examples/: ex4778_abduction_battery.rs
crates/nusy-abduction-battery/src/: lib.rs
crates/nusy-abduction-rank/: Cargo.toml
crates/nusy-abduction-rank/src/: lib.rs
crates/nusy-abduction-test/: Cargo.toml
crates/nusy-abduction-test/src/: lib.rs
crates/nusy-abduction/src/: lib.rs
crates/nusy-analogical/: Cargo.toml
crates/nusy-analogical/src/: lib.rs
crates/nusy-bayesian/: Cargo.toml
crates/nusy-bayesian-battery/: Cargo.toml
crates/nusy-bayesian-battery/examples/: ex4819_bayesian_battery.rs
crates/nusy-bayesian-battery/src/: lib.rs
crates/nusy-bayesian/src/: bayes.rs  grade.rs  lib.rs  reasoner.rs
crates/nusy-case-based/: Cargo.toml
crates/nusy-case-based/src/: lib.rs
crates/nusy-clinical-fixtures/: Cargo.toml
crates/nusy-clinical-fixtures/examples/: expr_4578_3_derivation_eval.rs
crates/nusy-clinical-fixtures/src/: cases.rs  lib.rs
crates/nusy-clinical-fixtures/tests/: harness.rs  zero_copy_adoption.rs
crates/nusy-cog-computable/: Cargo.toml
crates/nusy-cog-computable/src/: error.rs  lib.rs
crates/nusy-cpg/: Cargo.toml
crates/nusy-cpg/examples/: ex4613_gate_coverage_routing.rs  expr_4578_4_guideline_eval.rs
crates/nusy-cpg/src/: lib.rs
crates/nusy-cql/: Cargo.toml
crates/nusy-cql/src/: ast.rs  error.rs  eval.rs  lexer.rs  lib.rs  parser.rs
crates/nusy-cql/tests/: clinical_fixture.rs
crates/nusy-deontic/: Cargo.toml
crates/nusy-deontic/src/: lib.rs
crates/nusy-forward-chain/: Cargo.toml
crates/nusy-forward-chain/examples/: bench_arrow_vs_vec.rs  bench_incremental_vs_refire.rs  ex4735_scale_benchmark.rs
crates/nusy-forward-chain/src/: arrow_match.rs  batch.rs  lib.rs  proof.rs
crates/nusy-forward-chain/tests/: arrow_match_differential.rs  engine_differential.rs  forward_chain.rs  genericity_governance.rs  incremental_differential.rs  triple_batch.rs
crates/nusy-gate/: Cargo.toml
crates/nusy-gate/examples/: expr_4578_2_microworld_gate.rs
crates/nusy-gate/src/: lib.rs
crates/nusy-gate/tests/: gate.rs  governance_gate.rs
crates/nusy-inductive/: Cargo.toml
crates/nusy-inductive/src/: lib.rs
crates/nusy-plandef/: Cargo.toml
crates/nusy-plandef/src/: lib.rs
crates/nusy-plandef/tests/: apply.rs
crates/nusy-provenance/: Cargo.toml
crates/nusy-provenance/src/: lib.rs
crates/nusy-reasoner/: Cargo.toml
crates/nusy-reasoner-adapters/: Cargo.toml
crates/nusy-reasoner-adapters/src/: lib.rs
crates/nusy-reasoner-adapters/tests/: differential.rs  pipeline_compose.rs
crates/nusy-reasoner-conformance/: Cargo.toml
crates/nusy-reasoner-conformance/src/: lib.rs
crates/nusy-reasoner-conformance/tests/: conformance.rs
crates/nusy-reasoner/src/: compose.rs  lib.rs
crates/nusy-reasoning-causal/: Cargo.toml
crates/nusy-reasoning-causal/src/: adjustment.rs  clinical_gate.rs  counterfactual.rs  error.rs  graph.rs  identifiability.rs  intervention.rs  lib.rs  safety_routing.rs
crates/nusy-reasoning-causal/tests/: genericity.rs  y_graph_docalculus_seam.rs
crates/nusy-router/: Cargo.toml
crates/nusy-router/src/: lib.rs  reasoner_router.rs
crates/nusy-router/tests/: par_regression.rs  router.rs
crates/nusy-rule-compiler/: Cargo.toml
crates/nusy-rule-compiler/src/: lib.rs
crates/nusy-rule-compiler/tests/: precision_recall.rs
crates/nusy-unify/: Cargo.toml
crates/nusy-unify/src/: lib.rs  subst.rs  term.rs  unify.rs
crates/nusy-unify/tests/: forward_chain_fixture.rs
crates/repo-invariants/: Cargo.toml
crates/repo-invariants/src/: lib.rs
