[package]
name = "nusy-abduction-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
nusy-unify = { path = "../nusy-unify" }
nusy-forward-chain = { path = "../nusy-forward-chain" }
nusy-reasoner = { path = "../nusy-reasoner" }
nusy-abduction = { path = "../nusy-abduction" }
