[package]
name = "nusy-plandef"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PlanDefinition-analog decision graph: $apply a parameterized guideline against patient facts → grounded ActionProposals with an evidence chain (VOY-V18-2, EX-4597)"

[dependencies]
# Conditions are CQL-analog expressions evaluated over a FactStore (three-valued).
nusy-cql = { path = "../nusy-cql" }
