[package]
name = "nusy-reasoning-causal"
description = "Pearl's do-calculus: graph mutilation, adjustment sets, interventional + counterfactual queries"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arrow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
