[package]
name = "nusy-reasoning-causal"
description = "Pearl's do-calculus: graph mutilation, adjustment sets, interventional + counterfactual queries"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # CH-4734: crates.io retired (SG-4717) — distribution via GitHub
repository.workspace = true

[dependencies]
arrow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
